# nupic.hs

./: .gitignore  .gitmodules  README.md  stack.yaml
nupic/: Setup.hs  nupic.cabal
nupic-cpp/: Makefile  Setup.hs  nupic-cpp.cabal
nupic-cpp/cpp/: nupic.cpp  nupic.hpp  utils.cpp  utils.hpp
nupic-cpp/src/Foreign/Nupic/Internal/: EmptyCpp.hs
nupic-generator/: nupic-generator.cabal
nupic-generator/src-exe/: Main.hs
nupic-generator/src/Foreign/Nupic/Generator/: Algorithms.hs  Encoders.hs  Types.hs  Vector.hs
nupic-generator/src/Foreign/Nupic/Internal/: EmptyGenerator.hs
nupic/src/: Nupic.hs
nupic/src-exe/: Main.hs
nupic/src/Nupic/: Algorithms.hs  Encoders.hs  Types.hs
nupic/src/Nupic/Algorithms/: Anomaly.hs  BacktrackingTM.hs  Cells4.hs  SdrClassifier.hs  SpatialPooler.hs  TemporalMemory.hs
nupic/src/Nupic/Encoders/: ScalarEncoder.hs
nupic/src/Nupic/Types/: ClassifierResult.hs  Internal.hs  Sdr.hs
nupic/tests/: Main.hs
