name: nupic-cpp
version: 0.1.0
license: Apache-2.0
author: Li Meng Jun <lmjubuntu@gmail.com>
maintainer: Li Meng Jun <lmjubuntu@gmail.com>
copyright: Copyright 2015-2019 Li Meng Jun
build-type: Custom
cabal-version: >=1.10

custom-setup
  setup-depends:
      base
    , Cabal
    , hoppy-runtime >=0.5 && <0.6

extra-source-files: Makefile
                  , cpp/utils.cpp
                  , cpp/utils.hpp

library
  hs-source-dirs: src
  exposed-modules:
      Foreign.Nupic.Internal.EmptyCpp
  build-depends:
      base
    , nupic-generator
    , hoppy-runtime >=0.5 && <0.6
  default-language: Haskell2010
  ghc-options: -W -fwarn-incomplete-patterns -fwarn-unused-do-bind
