name: nupic-generator
version: 0.1.0
license: MIT
author: Li Meng Jun <lmjubuntu@gmail.com>
maintainer: Li Meng Jun <lmjubuntu@gmail.com>
copyright: Copyright 2015-2019 Li Meng Jun
build-type: Simple
cabal-version: >=1.10

-- This library component is here so that the C++ and Haskell gateway packages
-- can build-depends on it.  Really, the gateway packages should setup-depends
-- on the generator, but this is a new feature in Cabal 1.24 and some distros
-- still aren't shipping it yet.
library
  hs-source-dirs: src
  exposed-modules:
      Foreign.Nupic.Generator.Vector
    , Foreign.Nupic.Generator.Algorithms
    , Foreign.Nupic.Generator.Types
  build-depends:
      base
    , hoppy-std
    , hoppy-generator
  default-language: Haskell2010
  ghc-options: -W -fwarn-incomplete-patterns -fwarn-unused-do-bind

executable nupic-generator
  hs-source-dirs: src-exe
  main-is: Main.hs
  build-depends:
      base
    , haskell-src
    , hoppy-generator >=0.5 && <0.6
    , hoppy-std >=0.5 && <0.6
    , nupic-generator
  default-language: Haskell2010
  ghc-options: -W -fwarn-incomplete-patterns -fwarn-unused-do-bind
