name: nupic
version: 0.1.0
license: Apache-2.0
author: Li Meng Jun <lmjubuntu@gmail.com>
maintainer: Li Meng Jun <lmjubuntu@gmail.com>
copyright: Copyright 2015-2019 Li Meng Jun
build-type: Custom
cabal-version: >=1.10

custom-setup
  setup-depends:
      base
    , Cabal
    , hoppy-runtime >=0.5 && <0.6

library
  hs-source-dirs: src
  exposed-modules:
      Foreign.Nupic.Std
    , Foreign.Nupic.Internal
  other-extensions:
      FlexibleInstances
    , MultiParamTypeClasses
    , OverlappingInstances
    , TypeSynonymInstances
    , UndecidableInstances
  build-depends:
      base
    , nupic-cpp
    , nupic-generator
    , hoppy-runtime >=0.5 && <0.6
  default-language: Haskell2010
  ghc-options: -W -fwarn-incomplete-patterns -fwarn-unused-do-bind
  -- This causes us to link against libnupic.so:
  extra-libraries: nupic

executable nupic
  hs-source-dirs: src-exe
  main-is: Main.hs
  build-depends:
      base
    , nupic
  default-language: Haskell2010
  ghc-options: -W -fwarn-incomplete-patterns -fwarn-unused-do-bind -dynamic

test-suite nupic-tests
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
  default-language: Haskell2010
  ghc-options: -W -fwarn-incomplete-patterns -fwarn-unused-do-bind -dynamic
  build-depends:
      base
    , nupic
    , hoppy-runtime >=0.5 && <0.6
    , HUnit
